--- a/components/Start/PaymentMothod.module.css
+++ b/components/Start/PaymentMothod.module.css
@@ -34,6 +34,8 @@
     object-fit: cover;
     transition: all ease-in-out 500ms;
     background-size: 218px;
+    width: 218px;
+    height: 150px;
 }
 
 .mainDiv:hover>.gift {
@@ -44,6 +46,10 @@
     object-fit: cover;
     transition: all ease-in-out 500ms;
     background-size: 218px;
+    box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
+
+    width: 218px;
+    height: 150px;
 }
 
 /* credit card */
@@ -56,6 +62,8 @@
     object-fit: cover;
     transition: all ease-in-out 500ms;
     background-size: 146px;
+    width: 146px !important;
+    height: 150px !important;
 }
 
 .mainDiv:hover>.creditCard {
@@ -66,6 +74,8 @@
     object-fit: cover;
     transition: all ease-in-out 500ms;
     background-size: 146px;
+    width: 146px !important;
+    height: 150px !important;
 }
 
 /* paypal payment */
@@ -91,8 +101,6 @@
     background-size: 146px;
 }
 
-
-
 @media (max-height:750px) or (max-width:1280px) {
 
     .mainDiv>.gift {
@@ -114,6 +122,7 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 150px;
+        box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
     }
 
     /* credit card */
@@ -139,8 +148,6 @@
     }
 
     /* paypal payment */
-
-
     .mainDiv>.paypalPayment {
 
         background-image: url(/start/AddPaypal.svg);
@@ -159,5 +166,86 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 105px;
+    }
+}
+
+
+@media (max-height:550px) or (max-width:1024px) {
+
+    .mainDiv>.gift {
+
+        background-image: url(/start/AddGiftCard.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 120px !important;
+        width: 150px !important;
+        height: 88px !important;
+    }
+
+    .mainDiv:hover>.gift {
+
+        background-image: url(/start/gigtHover.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 120px !important;
+        box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
+        width: 150px !important;
+        height: 88px !important;
+    }
+
+    /* credit card */
+
+    .mainDiv>.creditCard {
+
+        background-image: url(/start/AddCreditCard.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 82px;
+
+        width: 150px !important;
+        height: 88px !important;
+    }
+
+    .mainDiv:hover>.creditCard {
+
+        background-image: url(/start/creditHover.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 82px;
+        width: 150px !important;
+        height: 88px !important;
+    }
+
+    /* paypal payment */
+    .mainDiv>.paypalPayment {
+
+        background-image: url(/start/AddPaypal.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 82px;
+        width: 150px !important;
+        height: 88px !important;
+    }
+
+    .mainDiv:hover>.paypalPayment {
+
+        background-image: url(/start/paypalHover.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        object-fit: cover;
+        transition: all ease-in-out 500ms;
+        background-size: 82px;
+        width: 150px !important;
+        height: 88px !important;
     }
 }
