--- a/components/Start/PaymentMothod.module.css
+++ b/components/Start/PaymentMothod.module.css
@@ -46,7 +46,7 @@
     object-fit: cover;
     transition: all ease-in-out 500ms;
     background-size: 218px;
-    box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
+
 
     width: 218px;
     height: 150px;
@@ -101,6 +101,12 @@
     background-size: 146px;
 }
 
+/* .mainDiv:hover {
+
+    box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
+    transition: all ease-in-out 500ms !important;
+} */
+
 @media (max-height:750px) or (max-width:1280px) {
 
     .mainDiv>.gift {
@@ -111,7 +117,8 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 150px;
-        width: 170px;
+        width: 170px !important;
+        height: 120px !important;
     }
 
     .mainDiv:hover>.gift {
@@ -122,7 +129,8 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 150px;
-        box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
+        width: 170px !important;
+        height: 120px !important;
     }
 
     /* credit card */
@@ -135,6 +143,8 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 105px;
+        width: 120px !important;
+        height: 120px !important;
     }
 
     .mainDiv:hover>.creditCard {
@@ -145,6 +155,9 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 105px;
+
+        width: 120px !important;
+        height: 120px !important;
     }
 
     /* paypal payment */
@@ -156,6 +169,8 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 105px;
+        width: 120px !important;
+        height: 120px !important;
     }
 
     .mainDiv:hover>.paypalPayment {
@@ -166,6 +181,20 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 105px;
+
+        width: 120px !important;
+        height: 120px !important;
+    }
+
+    .paypalSelected {
+        width: 120px !important;
+        height: 120px !important;
+    }
+
+
+    .creditCardSelected {
+        width: 120px !important;
+        height: 120px !important;
     }
 }
 
@@ -180,7 +209,7 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 120px !important;
-        width: 150px !important;
+        width: 135px !important;
         height: 88px !important;
     }
 
@@ -193,7 +222,7 @@
         transition: all ease-in-out 500ms;
         background-size: 120px !important;
         box-shadow: 0px 20px 44px rgba(0, 0, 0, 0.35) !important;
-        width: 150px !important;
+        width: 135px !important;
         height: 88px !important;
     }
 
@@ -208,7 +237,7 @@
         transition: all ease-in-out 500ms;
         background-size: 82px;
 
-        width: 150px !important;
+        width: 95px !important;
         height: 88px !important;
     }
 
@@ -220,7 +249,7 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 82px;
-        width: 150px !important;
+        width: 95px !important;
         height: 88px !important;
     }
 
@@ -233,7 +262,7 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 82px;
-        width: 150px !important;
+        width: 95px !important;
         height: 88px !important;
     }
 
@@ -245,7 +274,19 @@
         object-fit: cover;
         transition: all ease-in-out 500ms;
         background-size: 82px;
-        width: 150px !important;
+        width: 95px !important;
+        height: 88px !important;
+    }
+
+
+    .paypalSelected {
+        width: 95px !important;
+        height: 88px !important;
+    }
+
+
+    .creditCardSelected {
+        width: 95px !important;
         height: 88px !important;
     }
 }
