--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -40,7 +40,6 @@
     }
 
     .cardBackgroundHover {
-
         background-color: transparent;
         color: black;
         cursor: pointer;
@@ -328,9 +327,15 @@
 
     .paymentIcon {
 
-        width: 70px !important;
-        height: 50px !important;
+        width: 50px !important;
+        height: 30px !important;
 
+    }
+
+    .priceBack {
+        width: 60px !important;
+        height: 70px !important;
+        margin-bottom: 15px !important;
     }
 
 
@@ -384,8 +389,8 @@
     }
 
     .priceBack {
-        width: 80px !important;
-        height: 80px !important;
+        width: 60px !important;
+        height: 60px !important;
         margin-bottom: 8px !important;
     }
 
@@ -409,8 +414,8 @@
 
     .paymentIcon {
 
-        width: 70px !important;
-        height: 50px !important;
+        width: 60px !important;
+        height: 40px !important;
 
     }
 }
@@ -418,8 +423,8 @@
 @media (max-height:450px) {
 
     .priceBack {
-        width: 70px !important;
-        height: 70px !important;
+        width: 50px !important;
+        height: 50px !important;
         margin-bottom: 8px !important;
     }
 
@@ -440,8 +445,8 @@
 
     .paymentIcon {
 
-        width: 70px !important;
-        height: 50px !important;
+        width: 60px !important;
+        height: 40px !important;
 
     }
 
