--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -250,6 +250,14 @@
     margin-bottom: 15px !important;
 }
 
+/* cart payment icon */
+
+.paymentIcon {
+
+    width: 140px !important;
+    height: 70px !important;
+}
+
 @media (max-height:750px) {
 
     .deleteIcon {
