--- a/src/styles/CoursePage.module.css
+++ b/src/styles/CoursePage.module.css
@@ -252,10 +252,29 @@
 
 /* cart payment icon */
 
-.paymentIcon {
+/* .paymentIcon {
 
     width: 140px !important;
-    height: 70px !important;
+    height: 40px !important;
+} */
+
+
+@media(max-height:992px) {
+
+    .viewMoreIcon {
+        width: 22px !important;
+        height: 22px !important;
+
+    }
+}
+
+@media(max-height:812px) {
+
+    .viewMoreIcon {
+        width: 18px !important;
+        height: 18px !important;
+
+    }
 }
 
 @media (max-height:750px) {
@@ -264,6 +283,27 @@
 
         width: 15px !important;
         height: 15px !important;
+    }
+
+    .emailspaing {
+
+        padding-bottom: 2px !important;
+        padding-top: 2px !important;
+
+        margin-top: 6px !important;
+    }
+
+    .addedItemList {
+
+        padding: 5px 4px 12px 4px !important;
+
+        margin: 6px 20px 6px 20px !important;
+    }
+
+    .viewMoreIcon {
+        width: 15px !important;
+        height: 15px !important;
+
     }
 }
 
@@ -330,7 +370,7 @@
 
     .submitbtnbg {
 
-        padding: 3px 5px 3px 5px !important;
+        padding: 4px 5px 3px 5px !important;
     }
 
     .paymentIcon {
@@ -346,6 +386,27 @@
         margin-bottom: 15px !important;
     }
 
+
+    .emailspaing {
+
+        padding-bottom: 0.5px !important;
+        padding-top: 0.5px !important;
+
+        margin-top: 3px !important;
+    }
+
+    .addedItemList {
+
+        padding: 5px 4px 15px 4px !important;
+
+        margin: 6px 20px 6px 20px !important;
+    }
+
+    .viewMoreIcon {
+        width: 15px !important;
+        height: 15px !important;
+
+    }
 
 }
 
@@ -426,6 +487,33 @@
         height: 40px !important;
 
     }
+
+    .emailspaing {
+
+        padding-bottom: 0.5px !important;
+        padding-top: 0.5px !important;
+
+        margin-top: 1px !important;
+        margin-bottom: 0px !important;
+    }
+
+    .checkoutIcon {
+        width: 20px !important;
+        height: 20px !important;
+    }
+
+    .addedItemList {
+
+        padding: 5px 4px 10px 4px !important;
+
+        margin: 6px 20px 6px 20px !important;
+    }
+
+    .viewMoreIcon {
+        width: 15px !important;
+        height: 15px !important;
+
+    }
 }
 
 @media (max-height:450px) {
@@ -453,8 +541,26 @@
 
     .paymentIcon {
 
-        width: 60px !important;
-        height: 40px !important;
+        width: 30px !important;
+        height: 20px !important;
+
+    }
+
+    .addedItemList {
+
+        padding: 3px 4px 10px 4px !important;
+
+        margin: 2px 20px 2px 20px !important;
+    }
+
+    .readyToCheckoutBg {
+
+        margin-top: 10px !important;
+    }
+
+    .viewMoreIcon {
+        width: 15px !important;
+        height: 15px !important;
 
     }
 
