menu component completed

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -5,3 +5,20 @@
     -o-transition: opacity 1s;
     transition: opacity 1s;
 }
+
+
+/* .aboutFadeAnimation {
+
+    overflow-y: scroll !important;
+    height: auto !important;
+
+} */
+
+
+@media (max-height:450px) {
+
+    .aboutFadeAnimation p {
+
+        padding-bottom: 0px !important;
+    }
+}
