--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,8 +15,7 @@ a {
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Barlow', sans-serif;
-  font-weight: normal;
+  font-family: 'Barlow';
   color: black !important;
 }
 
@@ -1135,11 +1134,11 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 20px !important;
+    font-size: 17px !important;
   }
 
   .triplelargef {
-    font-size: 25px !important;
+    font-size: 20px !important;
     letter-spacing: 1px !important;
     font-weight: 600 !important;
     line-height: 25px !important;
@@ -1197,7 +1196,7 @@ ol {
   }
 
   .dubblelargef {
-    font-size: 22px !important;
+    font-size: 16px !important;
     line-height: 27px !important;
   }
 
